--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
         
 
     </footer>
-    <script src="../assets/Aos/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
         AOS.init()
     </script>
 
-    <script src="../assets/bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.js"></script>
 </body>
 </html>
